@@ -45,16 +45,16 @@ public class WebSecurityConfig {
                          .anyRequest().authenticated())
 
                  .csrf(AbstractHttpConfigurer::disable);
-        http.cors(httpSecurityCorsConfigurer -> {
-            CorsConfiguration configuration = new CorsConfiguration();
-            configuration.setAllowedOrigins(List.of("*"));
-            configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-            configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
-            configuration.setExposedHeaders(List.of("x-auth-token"));
-            UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-            source.registerCorsConfiguration("/**", configuration);
-            httpSecurityCorsConfigurer.configurationSource(source);
-        });
+//        http.cors(httpSecurityCorsConfigurer -> {
+//            CorsConfiguration configuration = new CorsConfiguration();
+//            configuration.setAllowedOrigins(List.of("*"));
+//            configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+//            configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
+//            configuration.setExposedHeaders(List.of("x-auth-token"));
+//            UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//            source.registerCorsConfiguration("/**", configuration);
+//            httpSecurityCorsConfigurer.configurationSource(source);
+//        });
         return http.build();
     }
 }
